добавил методы добовление и удаление ролей

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,3 +16,5 @@ management.metrics.distribution.percentiles-histogram.[http.server.requests]=tru
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+upload.path=/C:/Users/chesn/App/SpringProdjecks/DOTA/uploads
