--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,31 @@
-name: CI
+name: "Ruby on Rails CI"
 on:
-   # События, которые запускают jobs
-    push:
-      branches: [ "main" ]
-    pull_request:
-      branches: [ "main" ]
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
-# jobs запускаются параллельно, если не указана последовательность
 jobs:
-    # Название job вы можете назвать как угодно
-    my_build_job:
-      # Операционная система в виртуальной машине, в которой запускаются процессы
-      runs-on: ubuntu-latest
-        # Шаги
-        steps:
-          # Actions от github: проверяет репозиторий, гит и т.д.
-          - uses: actions/checkout@v3
-
-          # Пример однолинейного простого скрипта shell
-          - name: Run a one-line script
-            run: echo Hello, world!
-
-          # Пример многолинейного скрипта shell
-          - name: Run a multi-line script
-            run: |
-                echo Add other actions to build,
-                echo test, and deploy your project.
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127.0
+        with:
+          bundler-cache: true
+      - name: Run command on remote server
+        uses: D3rHase/ssh-command-action@v0.2.2
+        with:
+          host: ${{SSH_PRIVATE_HOST_DOTA2}}
+          user: ${{SSH_PRIVATE_USER_DOTA2}}
+          private_key: ${{SSH_PRIVATE_KEY_DOTA2}}
+          command: |
+            
+            docker-compose down;
+            docker rmi nobsxd/dota
+            docker-compose up -d --build;
+         
