--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: "Ruby on Rails CI"
 on:
   push:
-    branches: ["main"]
+    branches: 
+      - master
   pull_request:
     branches: ["main"]
 
