--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
             docker-compose up -d --build;
       - run: set -eu
       - run: mkdir "$HOME/.ssh"
-      - run: echo "${{secrets.SSH_PRIVATE_KEY_DOTA2" > "$HOME/.ssh/key"
+      - run: echo "${{secrets.SSH_PRIVATE_KEY_DOTA2}}" > "$HOME/.ssh/key"
       - run: chmod 600 "$HOME/.ssh/key"
       # Build
       - run: npm ci
