--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: "Ruby on Rails CI"
 on:
   push:
     branches: 
-      - master
+      -dev
+      
 jobs:
   deploy:
     runs-on: ubuntu-latest
