--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: "Ruby on Rails CI"
 on:
   push:
     branches: 
-      -dev
+      - master
       
 jobs:
   deploy:
@@ -18,11 +18,3 @@ jobs:
             docker-compose down;
             docker rmi nobsxd/dota
             docker-compose up -d --build;
-      - run: set -eu
-      - run: mkdir "$HOME/.ssh"
-      - run: echo "${{secrets.SSH_PRIVATE_KEY_DOTA2}}" > "$HOME/.ssh/key"
-      - run: chmod 600 "$HOME/.ssh/key"
-      # Build
-      - run: npm ci
-      - run: npm run build
-         
