--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Run command on remote server
-        uses: D3rHase/ssh-command-action@v0.2.2
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
           host: ${{secrets.SSH_PRIVATE_HOST_DOTA2}}
           user: ${{secrets.SSH_PRIVATE_USER_DATA2}}
-          private_key: ${{secrets.PRIVAT_178}}
+          key: ${{secrets.PRIVAT_178}}
+          known_hosts: ${{secrets.KNOWN_HOST}}
           command: |
           
             docker-compose down;
             docker rmi nobsxd/dota
             docker-compose up -d --build;
+  
+      
