--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
+      - name: Run command on remote server
+        uses: D3rHase/ssh-command-action@v0.2.2
         with:
-          key: ${{secrets.PRIVAT_178}}
-          known_hosts: ${{secrets.KNOWN_HOST}}
-          command: |
+           host: ${{secrets.SSH_PRIVATE_HOST_DOTA2}}
+           user: ${{secrets.SSH_PRIVATE_USER_DOTA2}}
+           private_key: ${{secrets.SSH_PRIVATE_KEY_DOTA2}}
+           command: |
             docker-compose down;
             docker rmi nobsxd/dota
             docker-compose up -d --build;
