--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
            user: ${{secrets.SSH_PRIVATE_USER_DOTA2}}
            private_key: ${{secrets.SSH_PRIVATE_KEY_DOTA2}}
            command: |
+             echo '--- START WORK ON REMOTE SERVER ---';
+             cd ${{secrets.KNOWN_HOST}};
             
   
       
