--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
            
            command: |
              echo '--- START WORK ON REMOTE SERVER ---';
+             docker images
              
             
   
