--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,17 @@ on:
       - master
       
 jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+           docker login -u ${{secrets.DOCKER_TOKEN}}
+           docker-compose up -d --build
+
   deploy:
     runs-on: ubuntu-latest
     steps:
