--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Docker login
-      run: docker login -u ${{secrets.DOCKER_TOKEN}}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
     - name: Build the Docker image
       run: docker-compose up -d --build
     
