--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
       with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Maven Package
+      run: mvn -B clean package -DskipTests    
     - name: build compose    
       run: docker-compose build
       
