--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,24 @@ jobs:
       uses: actions/setup-java@v1
       with:
           java-version: 17
+
+          
     - name: Maven Package
-      run: mvn -B clean package -DskipTests    
+      run: mvn -B clean package -DskipTests  
+
+      
     - name: build compose    
       run: docker-compose build
+
+    - name: push docker
+      run: docker-compose push
       
     
     
     
   deploy:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Run command on remote server
         uses: D3rHase/ssh-command-action@v0.2.2
@@ -41,7 +49,9 @@ jobs:
            
            command: |
              echo '--- START WORK ON REMOTE SERVER ---';
-             docker images
+             docker-compose down
+             docker rmi nobsxd/dota
+             docker-compose up -d --build
              
             
   
