--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://185.244.173.107:3306/Dota2
 jdbc.url=jdbc:mysql://localhost:5656/Dota2
 spring.datasource.username=root
-spring.datasource.password=${{secrets.DB_PASSWORD}}
+spring.datasource.password=m4IsXr1V4T
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.freemarker.expose-request-attributes=true
