--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,11 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/main/**/application.properties
 
-
+###config propertis###
+#/src/main/resources/application-dev.properties
 ### STS ###
+
 .apt_generated
 .classpath
 .factorypath
