--- a/docker/springBoot/Dockerfile
+++ b/docker/springBoot/Dockerfile
@@ -5,7 +5,7 @@
 #COPY  ${JAR_FILE} app.jar
 #ENTRYPOINT ["java","-jar","app.jar"]
 FROM openjdk:latest
-ARG JAR_FILE=/target/DOTA-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE=target/DOTA-0.0.1-SNAPSHOT.jar
 WORKDIR /opt/app
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","app.jar"]
