--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   api_service:
-    build: docker/springBoot
+    build: .
     image: nobsxd/dota
     restart: always
     container_name: spring
