--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8082
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${URL}
+spring.datasource.url=jdbc:mysql://185.244.173.107:3306/Dota2
 jdbc.url=jdbc:mysql://localhost:5656/Dota2
-spring.datasource.username=${USERNAME}
+spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
